--- a/src/Client/Activities.Client/Activities.Client.csproj
+++ b/src/Client/Activities.Client/Activities.Client.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\main.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\main.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.12.0" />
