--- a/src/Client/Activities.Client/Activities.Client.csproj
+++ b/src/Client/Activities.Client/Activities.Client.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.12.0" />
@@ -22,6 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Activities.Interfaces\Activities.Interfaces.csproj" />
+    <ProjectReference Include="..\Activities.Remote\Activities.Remote.csproj" />
     <ProjectReference Include="..\Activities.Services\Activities.Services.csproj" />
   </ItemGroup>
 
