--- a/src/Client/Activities.Client/Activities.Client.csproj
+++ b/src/Client/Activities.Client/Activities.Client.csproj
@@ -17,6 +17,8 @@
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Cropper.Blazor" Version="1.3.2" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Humanizer.Core.pl" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
