--- a/src/Client/Activities.Services/Activities.Services.csproj
+++ b/src/Client/Activities.Services/Activities.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Activities.Interfaces\Activities.Interfaces.csproj" />
     <ProjectReference Include="..\Activities.Models\Activities.Models.csproj" />
   </ItemGroup>
